cmake_minimum_required(VERSION 3.0)

project(MySqlSessionLib)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
find_package(MySQL REQUIRED)

set(MYSQLSESSIONLIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/mysqlsession)
file(GLOB MYSQLSESSIONLIB_HEADERS "${MYSQLSESSIONLIB_INCLUDE}/*.h")
file(GLOB MYSQLSESSIONLIB_SRC "*.cpp")

include_directories(${MYSQL_INCLUDE_DIR})
include_directories(${JSONCPPLIB_INCLUDE})
include_directories(${SQLREPOLIB_INCLUDE})

add_library(MySqlSessionLib ${MYSQLSESSIONLIB_SRC} ${MYSQLSESSIONLIB_HEADERS})

set(MySQL_LIBRARIES ${MYSQL_LIB} PARENT_SCOPE)
set(MYSQLSESSIONLIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
