cmake_minimum_required (VERSION 3.0)

project(SqliteSessionLib)

set(SQLITESESSIONLIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/sqlitesession)
file(GLOB SQLITESESSIONLIB_HEADERS "${SQLITESESSIONLIB_INCLUDE}/*.h")
file(GLOB SQLITESESSIONLIB_SRC "*.cpp")

include_directories(${SQLITELIB_INCLUDE})
include_directories(${JSONCPPLIB_INCLUDE})
include_directories(${SQLREPOLIB_INCLUDE})

add_library(SqliteSessionLib ${SQLITESESSIONLIB_SRC} ${SQLITESESSIONLIB_HEADERS})

set(SQLITESESSIONLIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
